cm4all-beng-proxy (0.6.18) unstable; urgency=low

  * delegate-handler: support conditional GET and ranges
  * file-handler: fix suffix-byte-range-spec parser
  * delegate-helper: call open() with O_CLOEXEC|O_NOCTTY
  * istream-file: don't set FD_CLOEXEC if O_CLOEXEC is available
  * stock: hold caller pool during "get" operation
  * main: free balancer object during shutdown

 --

cm4all-beng-proxy (0.6.17) unstable; urgency=low

  * tcp-stock: implemented a load balancer
  * python: accept address list in the ajp() method
  * http-server: added timeout for the HTTP request headers
  * response: close template when the content type is wrong
  * delegate-get: implemented response headers
  * delegate-get: provide status codes and error messages

 -- Max Kellermann <mk@cm4all.com>  Fri, 18 Sep 2009 15:36:57 +0200

cm4all-beng-proxy (0.6.16) unstable; urgency=low

  * tcp-stock: added support for bulldog-tyke
  * sink-buffer: close input if it's not used in the constructor
  * http-cache-memcached: close response body when deserialization fails
  * serialize: fix regression in serialize_uint64()

 -- Max Kellermann <mk@cm4all.com>  Tue, 15 Sep 2009 19:26:07 +0200

cm4all-beng-proxy (0.6.15) unstable; urgency=low

  * http-cache-choice: find more duplicates during cleanup
  * handler: added AJP handler
  * ajp-request: unref pool only on tcp_stock failure
  * ajp-client: prevent parser recursion
  * ajp-client: free request body when response is closed
  * ajp-client: reuse connection after END_RESPONSE packet
  * ajp-client: enable TCP_CORK while sending
  * istream-ajp-body: added a second "length" header field
  * ajp-client: auto-send empty request body chunk
  * ajp-client: register "write" event after GET_BODY_CHUNK packet
  * ajp-client: implemented request and response headers
  * http-cache-rfc: don't rewind tpool if called recursively

 -- Max Kellermann <mk@cm4all.com>  Fri, 11 Sep 2009 16:04:06 +0200

cm4all-beng-proxy (0.6.14) unstable; urgency=low
