@@ -6,6 +6,7 @@ cm4all-beng-proxy (0.6.18) unstable; urgency=low
   * istream-file: don't set FD_CLOEXEC if O_CLOEXEC is available
   * stock: hold caller pool during "get" operation
   * main: free balancer object during shutdown
+  * memcached-client: enable socket timeout
 
  --
 
